# intermittent-alignment-error

./: LICENSE  README.md  example.ipynb  intermittent_alignment_error.py  pyproject.toml
intermittent_alignment_error/: __init__.py  helpers.py  metric.py
