[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "intermittent_alignment_error"
version = "0.1.2"
description = "Timing-aware metric for intermittent demand forecasting"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Jonatan Flyckt" }
]
dependencies = [
  "numpy>=1.23",
  "matplotlib>=3.7"
]

[project.urls]
Homepage = "https://github.com/jonatan-flyckt/intermittent-alignment-error"
Repository = "https://github.com/jonatan-flyckt/intermittent-alignment-error"

[tool.setuptools]
packages = ["intermittent_alignment_error"]
include-package-data = false